@@ -6,11 +6,11 @@ import java.util.Arrays;
 import java.util.List;
 
 public enum ErrorStatues {
-    BAD_REQUEST(HttpStatus.BAD_REQUEST, Arrays.asList(ErrorCode.E4001)),
+    BAD_REQUEST(HttpStatus.BAD_REQUEST, List.of(ErrorCode.E4001)),
     UNAUTHORIZED(HttpStatus.UNAUTHORIZED, Arrays.asList(ErrorCode.E4011, ErrorCode.E4012, ErrorCode.E4013)),
-    FORBIDDEN(HttpStatus.FORBIDDEN, Arrays.asList(ErrorCode.E4031)),
-    CONFLICT(HttpStatus.CONFLICT, Arrays.asList(ErrorCode.E4091)),
-    INTERNAL_SERVER_ERROR(HttpStatus.INTERNAL_SERVER_ERROR, Arrays.asList(ErrorCode.E5001));
+    FORBIDDEN(HttpStatus.FORBIDDEN, List.of(ErrorCode.E4031)),
+    CONFLICT(HttpStatus.CONFLICT, List.of(ErrorCode.E4091)),
+    INTERNAL_SERVER_ERROR(HttpStatus.INTERNAL_SERVER_ERROR, List.of(ErrorCode.E5001));
 
     private final HttpStatus httpStatus;
     private final List<ErrorCode> errorCodeList;
